[package]
name = "graph_event"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/patrickfp93/graph_event"
description = "Armc is a rust implementation that facilitates Mutex access to variables."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armc = "1.3.2"
