[package]
name = "graph_event"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/patrickfp93/graph_event"
description = "The project is focused on graph nodes that are connected through mutation events."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
armc = "1.3.2"
